--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Medical_website</title>
+	<title>FiniteYfi 1.0</title>
 	<!-- Google firebase api -->
 	<script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-firestore.js"></script>
 	<!-- Google Fonts -->
