--- a/index.html
+++ b/index.html
@@ -1,5 +1,82 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
+	
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "http://schema.org/LocalBusiness",
+  "additionalType":" FiniteYfi  ",
+  "name": " FiniteYfi™(Private) Limited ",
+  "alternateName" : " FiniteYfi™(Pvt) Ltd",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "1st Floor Deffi Plaza, University Road ,Near University Of IT and AeroNotics ",
+    "addressLocality": "New IT HUB ",
+    "addressRegion": "NewYork",
+    "postalCode": "18028"    
+  },
+  "url": "https://finiteyfi.netlify.app/",
+  "email":"infofyfi@gmail.com",
+  "image":"https://finiteyfi.netlify.app/images/logo.jpeg",
+  "description": "FiniteYFI(fYFI) is the ERC-20 deflationary Cryptocurrency with the Aiming to Build a new Farming Concept to reward the holders. FiniteYFI is Building a the Decentralized Uber dAPP on the ETHEREUM. As we are writing this we are working on call which is more than 55% completed.",
+  "logo": "https://finiteyfi.netlify.app/images/check.jpg",
+  "priceRange": "$$$",
+   "openingHours": ["Mo-Sun 08:00-20:30"],  
+  "@type": "Person",
+      "name": "CryptoGen",
+      "sameAs": ["(https://twitter.com/fYFIofficial)"]
+} 
+]
+}
+    <span itemscope itemtype="https://schema.org/Organization">
+  <link itemprop="url" href="https://ufvts.com/">
+  <a itemprop="sameAs" href="https://medium.com/@FiniteYFI/quick-token-introduction-61af1d1e5f35">Medium</a>
+  <a itemprop="sameAs" href="https://twitter.com/fYFIofficial">Twitter</a>
+  <a itemprop="sameAs"http://youtube.com/channel/UCIuDUNeadmKo5UfguwBH65Q">Youtube</a> 
+   
+">Instagram</a>
+
+</span>
+
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "url": "https://finiteyfi.netlify.app",
+  "logo": "https://finiteyfi.netlify.app/images/check.jpg"
+}
+ 
+	</script>
+        
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://finiteyfi.netlify.app",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://finiteyfi.netlify.app/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+
+        <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Book",
+  "name": "Innovative Decentralized Company  ",
+  "description": "FiniteYFI(fYFI) is the ERC-20 deflationary Cryptocurrency with the Aiming to Build a new Farming Concept to reward the holders. FiniteYFI is Building a the Decentralized Uber dAPP on the ETHEREUM. As we are writing this we are working on call which is more than 55% completed",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "88",
+    "bestRating": "100",
+    "ratingCount": "20"
+  }
+}
+</script>
+
+	
 <head>
 	<meta charset="UTF-8">
 	<title>FiniteYfi 1.0</title>
