--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 	<link rel="canonical" href="https://finiteyfi.netlify.app/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Home - Finiteyfi Ltd |  Quality Innovation Growing" />
-<meta property="og:description" content="We plan to make your secure &amp; reliable" />
+<meta property="og:title" content="Home - Finiteyfi Ltd |  New Era Of ERC20" />
+<meta property="og:description" content="Leading the world with decentralized Solution " />
 <meta property="og:url" content="https://finiteyfi.netlify.app" />p
 <meta name="twitter:title" content="Home - FiniteYfi™(Pvt) Ltd | | Quality Innovation Growing" />
 <script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"https://finiteyfi.netlify.app#website","url":"https://finiteyfi.netlify.app","name":"Finiteyfi\u2122(Pvt) Ltd  | Quality Innovation Growing","potentialAction":{"@type":"SearchAction","target":"https://finiteyfi.netlify.app?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
