--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@
 			<div class="why_choose_us main">
 				<div class="section_title">
 					<h2>Why Choose Us?</h2>
-					<p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore. Et Dolore Magna Aliqua.</p>
+					<p>Leading The World Wwith decentralized Solution and next genration Etherum Dapps and ECR20 Solutions .</p>
 				</div>
 				<div class="abouts fix common_padding_top wow fadeInUp"  data-wow-duration="3s" data-wow-delay=".3s">
 					<div class="abouts_img">
-						<img src="images/why.png" alt="" />
+						<img src="images/man.png" alt="" />
 					</div>
 					<div class="abouts_right fix">
 						<div class="single_about">
