--- a/index.html
+++ b/index.html
@@ -272,43 +272,43 @@
 						<div class="single_about">
 							<i class="fas fa-hospital-symbol"></i>
 							<div class="single_about_contant">
-								<h4>Advanced Technology</h4>
-								<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+								<h4>Decentralization</h4>
+								<p>t's all decentralized. and distributed with Fair platform and encryption </p>
+							</div>
+						</div>
+						<div class="single_about">
+							<i class="fas fa-hospital-symbol"></i>
+							<div class="single_about_contant">
+								<h4>Polymerized mine</h4>
+								<p>TT, PALA and Finiteyfi build mines without bubble..</p>
+							</div>
+						</div>
+						<div class="single_about">
+							<i class="fas fa-hospital-symbol"></i>
+							<div class="single_about_contant">
+								<h4>No private placement distribution mechanism</h4>
+								<p>In order to avoid the issuer monopolizing the trading market, finiteYfi  circulation right is decided by participants.</p>
+							</div>
+						</div>
+						<div class="single_about">
+							<i class="fas fa-hospital-symbol"></i>
+							<div class="single_about_contant">
+								<h4>Multi currency polymerized mine</h4>
+								<p>t can effectively let high-quality issuers issue their own tokens based on Pt chain technology and build an polymerized mine together.</p>
+							</div>
+						</div>
+						<div class="single_about">
+							<i class="fas fa-hospital-symbol"></i>
+							<div class="single_about_contant">
+								<h4>eague Of Pioneersy</h4>
+								<p>One-stop DAPP development services to create a fully self operated decentralized ecological construction..</p>
 							</div>
 						</div>
 						<div class="single_about">
 							<i class="fas fa-hospital-symbol"></i>
 							<div class="single_about_contant">
 								<h4>Advanced Technology</h4>
-								<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-							</div>
-						</div>
-						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
-							<div class="single_about_contant">
-								<h4>Advanced Technology</h4>
-								<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-							</div>
-						</div>
-						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
-							<div class="single_about_contant">
-								<h4>Advanced Technology</h4>
-								<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-							</div>
-						</div>
-						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
-							<div class="single_about_contant">
-								<h4>Advanced Technology</h4>
-								<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-							</div>
-						</div>
-						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
-							<div class="single_about_contant">
-								<h4>Advanced Technology</h4>
-								<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+								<p>Advanced decentralized solution with etherum virtual machine and erc20 deffi  .</p>
 							</div>
 						</div>
 					</div>
