--- a/index.html
+++ b/index.html
@@ -270,42 +270,42 @@
 					</div>
 					<div class="abouts_right fix">
 						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
+							<i class="fas fa-chart-bar"></i>
 							<div class="single_about_contant">
 								<h4>Decentralization</h4>
 								<p>t's all decentralized. and distributed with Fair platform and encryption </p>
 							</div>
 						</div>
 						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
+							<i class="fas fa-clone"></i>
 							<div class="single_about_contant">
 								<h4>Polymerized mine</h4>
 								<p>TT, PALA and Finiteyfi build mines without bubble..</p>
 							</div>
 						</div>
 						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
+							<i class="fas fa-code"></i>
 							<div class="single_about_contant">
 								<h4>No private placement distribution mechanism</h4>
 								<p>In order to avoid the issuer monopolizing the trading market, finiteYfi  circulation right is decided by participants.</p>
 							</div>
 						</div>
 						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
+							<i class="fas fa-cloud-upload-alt"></i>
 							<div class="single_about_contant">
 								<h4>Multi currency polymerized mine</h4>
 								<p>t can effectively let high-quality issuers issue their own tokens based on Pt chain technology and build an polymerized mine together.</p>
 							</div>
 						</div>
 						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
+							<i class="fas fa-coins"></i>
 							<div class="single_about_contant">
 								<h4>eague Of Pioneersy</h4>
 								<p>One-stop DAPP development services to create a fully self operated decentralized ecological construction..</p>
 							</div>
 						</div>
 						<div class="single_about">
-							<i class="fas fa-hospital-symbol"></i>
+							<i class="fas fa-tablet"></i>
 							<div class="single_about_contant">
 								<h4>Advanced Technology</h4>
 								<p>Advanced decentralized solution with etherum virtual machine and erc20 deffi  .</p>
