--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 		<div class="gallery main">
 			<div class="section_title">
 				<h2>Gallery</h2>
-				<p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore. Et Dolore Magna Aliqua.</p>
+				<p>A new era of yeald Farming and rewarding to holders .</p>
 			</div>
 			<div class="galler_contant fix common_padding_top wow fadeInUp"  data-wow-duration="2s" data-wow-delay=".3s">
 				<div class="img_1">
@@ -502,9 +502,9 @@
 	<footer class="footer_area">
 		<div class="footer main">
 			<div class="footer_icon fix">
-				<a href="#"><i class="fab fa-facebook-f"></i></a>
-				<a href="#"><i class="fab fa-facebook-f"></i></a>
-				<a href="#"><i class="fab fa-facebook-f"></i></a>
+				<a href="#"><i class="fab fa-github"></i></a>
+				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-twitch"></i></a>
 			</div>
 			<p>&copy; Copyright | Fyfi.finance 2020.All Right Reserved </p>
 		</div>
