--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 					<ul>
 						<li><a href="index.html">home</a></li>
 						<li><a href="#about">about us</a></li>
-						<li><a href="#gallery">gallery</a></li>
+						<li><a href="#gallery">Portfolio</a></li>
 						<li><a href="#">appoinment</a></li>
-						<li><a href="#testimonial">testimonials</a></li>
-						<li><a href="#contact">content us</a></li>
+						<li><a href="#testimonial">partners</a></li>
+						<li><a href="#contact">contact  us</a></li>
 					</ul>
 				</div>
 				 <!-- End Menu Area -->
@@ -231,24 +231,24 @@
 		<div class="service_area common_padding_top">
 			<div class="service main">
 				<div class="section_title">
-					<h2>FiniteYFI USE CASE</h2>
-					<p class = " cj">D-Ride-Hailing dAPP ERC-20 Token.</p>
+					<h2>FiniteYFI Yield concepts </h2>
+					<p class = " cj">We constantly improve and iterate upon every possible stack to provide access to the best protocols in the easiest way possible.</p>
 				</div>
 				<div class="services fix common_padding_top wow fadeInUp" data-wow-duration="3s" data-wow-delay=".3s">
 					<div class="single_service">
 						<i class="far fa-hospital"></i>
-						<h3>Easy Booking</h3>
-						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+						<h3>Borrow</h3>
+						<p>Borrow any supported asset directly to your wallet. Use existing crypto holdings as collateral..</p>
 					</div>
 					<div class="single_service">
 						<i class="far fa-crypto"></i>
-						<h3>Easy Booking</h3>
-						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+						<h3>Lend</h3>
+						<p>Deposit funds to continuously earn interest over time. Variable interest ensures you always get market rate.</p>
 					</div>
 					<div class="single_service">
-						<i class="far fa-calendar-alt"></i>
-						<h3>Easy Booking</h3>
-						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+						<i class="far fa-stack-exchanget"></i>
+						<h3>Manage</h3>
+						<p>View, manage, and close margin positions. Track portfolio performance over time..</p>
 					</div>
 				</div>
 			</div>
