--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 					</div>
 					<div class="single_service">
 						<i class="far fa-stack-exchanget"></i>
-						<h3>Manage</h3>
+						<h3>Manage .</h3>
 						<p>View, manage, and close margin positions. Track portfolio performance over time..</p>
 					</div>
 				</div>
