--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
 	<section class="gallery_area common_padding_top" id="gallery">
 		<div class="gallery main">
 			<div class="section_title">
-				<h2>Gallery</h2>
-				<p>A new era of yeald Farming and rewarding to holders .</p>
+				<h2>Portfolio </h2>
+				<p>Making The Blockchain World more powerfull with decentralized soultions  .</p>
 			</div>
 			<div class="galler_contant fix common_padding_top wow fadeInUp"  data-wow-duration="2s" data-wow-delay=".3s">
 				<div class="img_1">
