--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
 	<section class="specialist_area common_padding_top">
 		<div class="specialist main">
 			<div class="section_title">
-				<h2>Meet Our Specialists</h2>
-				<p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore. Et Dolore Magna Aliqua.</p>
+				<h2>Partners and Advisors </h2>
+				<p>We are in partners with top blockchain corporates and influncers .</p>
 			</div>
 			<div class="members fix common_padding_top wow fadeInUp"  data-wow-duration="2s" data-wow-delay=".3s">
 				<div class="single_member">
