--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 <meta name="twitter:title" content="Home - FiniteYfi™(Pvt) Ltd | | Quality Innovation Growing" />
 <script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"https://finiteyfi.netlify.app#website","url":"https://finiteyfi.netlify.app","name":"Finiteyfi\u2122(Pvt) Ltd  | Quality Innovation Growing","potentialAction":{"@type":"SearchAction","target":"https://finiteyfi.netlify.app?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
 
+	<script data-ad-client="ca-pub-6982390009413547" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 	<!--  Start Home Area  -->
